# petfinder

./: .gitignore  Dockerfile  Makefile  README.md  build-docker-image.sh  pyproject.toml  run.sh
eda/: eda001.ipynb
exp/: exp000.py  exp001.py  exp002.py  exp003.py  exp004.py  exp005.py
src/core/: logger.py
src/tasks/: fetch_datasets.py
