[tool.poetry]
name = "petfinder"
version = "0.1.0"
description = ""
authors = ["daikichiba9511 <daikichiba.tech.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
scikit-learn = "^1.0"
numpy = "^1.21.2"
pandas = "<1.3.4"
pytorch-lightning = "^1.4.0,<1.5.0"
grad-cam = "^1.3.1"
ttach = "^0.0.3"
python-box = "^5.4.1"
timm = "^0.4.12"
torch = "1.10.0"
poethepoet = "*"

[tool.poetry.dev-dependencies]
jupytext = "^1.11.4"
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11-190 = "poetry run python3 -m pip install torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html"
force-cuda11 = "poetry run python3 -m pip install torch==1.10.0+cu111 torchvision==0.11.1+cu111 torchaudio==0.10.0+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html"
force-cuda11-lts = "poetry run python3 -m pip install torch==1.8.2+cu111 torchvision==0.9.2+cu111 torchaudio==0.8.2 -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html"
